Bug 251349 - REGRESSION(259508@main) WinCairo can't compile: error C2027: use of undefined type 'PAL::WebGPU::PresentationContext'
Summary: REGRESSION(259508@main) WinCairo can't compile: error C2027: use of undefined...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGPU (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Fujii Hironori
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-01-30 00:20 PST by Fujii Hironori
Modified: 2023-01-30 00:30 PST (History)
1 user (show)

See Also:


Attachments
[fast-cq] Patch (1.08 KB, patch)
2023-01-30 00:25 PST, Fujii Hironori
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Fujii Hironori 2023-01-30 00:20:38 PST
REGRESSION(259508@main) WinCairo can't compile: error C2027: use of undefined type 'PAL::WebGPU::PresentationContext'

C:\MSVS\VC\Tools\MSVC\14.33.31629\bin\Hostx64\x64\cl.exe  [...] -c C:\BW\WinCairo-64-bit-Debug-Build\build\WebKitBuild\Debug\WebKit\DerivedSources\unified-sources\UnifiedSource-13fb4697-3.cpp
C:\BW\WinCairo-64-bit-Debug-Build\build\WebKitBuild\Debug\WTF\Headers\wtf/Ref.h(61): error C2027: use of undefined type 'PAL::WebGPU::PresentationContext'
C:\BW\WinCairo-64-bit-Debug-Build\build\WebKitBuild\Debug\PAL\Headers\pal/graphics/WebGPU/WebGPU.h(37): note: see declaration of 'PAL::WebGPU::PresentationContext'
C:\BW\WinCairo-64-bit-Debug-Build\build\WebKitBuild\Debug\WTF\Headers\wtf/Ref.h(55): note: while compiling class template member function 'WTF::Ref<PAL::WebGPU::PresentationContext,WTF::RawPtrTraits<T>>::~Ref(void)'
        with
        [
            T=PAL::WebGPU::PresentationContext
        ]
C:\BW\WinCairo-64-bit-Debug-Build\build\Source\WebKit\GPUProcess/graphics/WebGPU/RemoteGPU.cpp(177): note: see reference to function template instantiation 'WTF::Ref<PAL::WebGPU::PresentationContext,WTF::RawPtrTraits<T>>::~Ref(void)' being compiled
        with
        [
            T=PAL::WebGPU::PresentationContext
        ]
C:\BW\WinCairo-64-bit-Debug-Build\build\Source\WebKit\GPUProcess\graphics\WebGPU\RemotePresentationContext.h(84): note: see reference to class template instantiation 'WTF::Ref<PAL::WebGPU::PresentationContext,WTF::RawPtrTraits<T>>' being compiled
        with
        [
            T=PAL::WebGPU::PresentationContext
        ]
Comment 1 Fujii Hironori 2023-01-30 00:25:16 PST
Created attachment 464749 [details]
[fast-cq] Patch
Comment 2 EWS 2023-01-30 00:29:44 PST
Committed 259544@main (114fc809441a): <https://commits.webkit.org/259544@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 464749 [details].
Comment 3 Radar WebKit Bug Importer 2023-01-30 00:30:19 PST
<rdar://problem/104811683>