REGRESSION(259508@main) WinCairo can't compile: error C2027: use of undefined type 'PAL::WebGPU::PresentationContext' https://bugs.webkit.org/show_bug.cgi?id=251349

Unreviewed build fix.

* Source/WebKit/GPUProcess/graphics/WebGPU/RemoteGPU.cpp:

Canonical link: https://commits.webkit.org/259544@main